beepr 1.3.9000
===========

* Fixed a bug that resulted in R crashing when calling `beep()` multiple times in a short time frame. (#26)

beepr 1.3
===========

* Fixed a bug that made it impossible to play files with spaces on Linux.
* Added a new function beep_on_error that only beeps if an expression results in an error. (Courtesy of @dobbleobble).

beepr 1.2
===========

* Removed the previously deprecated `ping` function.
* Fixed incompatibility with `stringr` 1.0.0
* Added support for playing urls like beep("http://www.kessels.com/catsounds/cat1.wav"). Currently "beep" can only handle http urls, https is not supported.
* Added "sword" sound inspired by the presentation by Yihui Xie at UseR! 2014 (https://github.com/yihui/knitr-talks/tree/master/useR2014)

beepr 1.1
===========

* beep() throws a warning instead of an error if no working audio interface is found. The rationale for this is that it would be worse if a long analysis was aborted due to the notification system failing rather than to not throw a proper error.
* Changed the name of the package from `pingr` to `beepr`.
* Renamed `ping()` to `beep()`.

pingr 1.0
===========

* Added the possibility to use `paplay` to play audio on Linux.
* Changed the priority for which audio program is used first on Linux. `paplay` and `aplay` is now tried first and VLC is used as the last resort.
* It is now possible to play any wav-file using `ping("my_wav_fil.wav")`

pingr 0.1
===========

* Intial release.